// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From-To-Picker customStyleAndText smoke-test 1`] = `
<div class="trimet-ambient">
  <i style="color: rgb(255, 255, 0);">
    Your trip:
  </i>
  <span class="sc-gEvEer gKwvpa">
    <span class="sc-aXZVg ddQfmk">
      <button class="sc-eqUAAy bFQwHW">
        From here
      </button>
    </span>
    <span class="sc-aXZVg ddQfmk">
      <button class="sc-eqUAAy bFQwHW">
        To here
      </button>
    </span>
  </span>
</div>
`;

exports[`From-To-Picker fromTo smoke-test 1`] = `
<span class="sc-gEvEer gKwvpa">
  <span class="sc-aXZVg ddQfmk">
    <svg viewbox="0 0 512 512"
         height="0.9em"
         width="0.9em"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
    <button class="sc-eqUAAy bFQwHW">
      From here
    </button>
  </span>
  <span class="sc-aXZVg ddQfmk">
    <svg viewbox="0 0 384 512"
         height="0.9em"
         width="0.9em"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
    <button class="sc-eqUAAy bFQwHW">
      To here
    </button>
  </span>
</span>
`;

exports[`From-To-Picker smallTextSansSerif smoke-test 1`] = `
<span style="font-size: 75%; font-family: sans-serif;">
  <strong>
    Plan a trip:
  </strong>
  <span class="sc-gEvEer gKwvpa">
    <span class="sc-aXZVg ddQfmk">
      <svg viewbox="0 0 512 512"
           height="0.9em"
           width="0.9em"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
      >
        <path fill="currentColor"
              d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
        >
        </path>
      </svg>
      <button class="sc-eqUAAy bFQwHW">
        From here
      </button>
    </span>
    <span class="sc-aXZVg ddQfmk">
      <svg viewbox="0 0 384 512"
           height="0.9em"
           width="0.9em"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
      >
        <path fill="currentColor"
              d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
        >
        </path>
      </svg>
      <button class="sc-eqUAAy bFQwHW">
        To here
      </button>
    </span>
  </span>
</span>
`;
